# EchoLearning

./: .gitignore  Cargo.toml
client/: index.html  package.json  vite.config.ts.timestamp-1695116522460-3db3a6441bfdd8.mjs
client/src/: App.tsx  index.css
client/src/components/: MessageBox.tsx  NavBar.tsx  Toast.tsx  index.ts
client/src/pages/: Home.tsx  Login.tsx  Me.tsx  NotFound.tsx  Register.tsx  Reset.tsx  ResetPrompt.tsx  index.ts
src/: account.rs  auth.rs  config.rs  main.rs  middleware.rs
src/db/: models.rs  schemas.rs
src/questions/: mod.rs  question.rs
src/templates/: reset.hbs  verify.hbs
src/utils/: mod.rs  reset.rs  secret.rs  verification.rs
